--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 body {
   margin: 0 auto;
   display: flex;
-
+  background: url("/bg.png") no-repeat;
+  background-size: contain;
   min-width: 320px;
   min-height: 100vh;
 }
