--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 #root {
   margin: 0 auto;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
