--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@
 
 body {
   margin: 0 auto;
-  background: url("/bg.png") no-repeat;
-  background-size: contain;
-  min-width: 100vw;
+  background: url("/bg.png") no-repeat center center fixed;
+  background-size: cover;
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
 }
